Add logout button and improve login functions

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,5 +12,5 @@
             <label for="password">Password</label>
         </div>
     </form>
-    <button class="login-button" (click)="onLogin()">Login</button>
+    <button class="login-button" (click)="loginService()">Login</button>
 </div>
